<resources>
    <string name="app_name">Custo de Viagem</string>
    <string name="distance">Distancia</string>
    <string name="total_km">Total de Quilometos</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">KM por Litro</string>
    <string name="total_spend">Seu gasto Total será De:</string>
    <string name="text_total_value">R$ 0</string>
    <string name="calculate">CALCULAR</string>
    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>